// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonCta /> can change size, border width and icon size 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ButtonCta
    bkgndBottom="#ffffff"
    bkgndTop="#000000"
    borderWidth={1}
    iconName="cross-solid"
    iconSize={6}
    onClick={[Function]}
    size={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bkgndBottom": "#ffffff",
      "bkgndTop": "#000000",
      "borderWidth": 1,
      "children": <Icon
        iconColour="#ffffff"
        iconName="cross-solid"
        iconSize={6}
      />,
      "className": undefined,
      "disabled": undefined,
      "onClick": [Function],
      "size": 20,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "iconColour": "#ffffff",
        "iconName": "cross-solid",
        "iconSize": 6,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bkgndBottom": "#ffffff",
        "bkgndTop": "#000000",
        "borderWidth": 1,
        "children": <Icon
          iconColour="#ffffff"
          iconName="cross-solid"
          iconSize={6}
        />,
        "className": undefined,
        "disabled": undefined,
        "onClick": [Function],
        "size": 20,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "iconColour": "#ffffff",
          "iconName": "cross-solid",
          "iconSize": 6,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ButtonCta /> renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ButtonCta
    bkgndBottom="#ffffff"
    bkgndTop="#000000"
    iconName="cross-solid"
    onClick={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bkgndBottom": "#ffffff",
      "bkgndTop": "#000000",
      "borderWidth": undefined,
      "children": <Icon
        iconColour="#ffffff"
        iconName="cross-solid"
        iconSize={32}
      />,
      "className": undefined,
      "disabled": undefined,
      "onClick": [Function],
      "size": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "iconColour": "#ffffff",
        "iconName": "cross-solid",
        "iconSize": 32,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bkgndBottom": "#ffffff",
        "bkgndTop": "#000000",
        "borderWidth": undefined,
        "children": <Icon
          iconColour="#ffffff"
          iconName="cross-solid"
          iconSize={32}
        />,
        "className": undefined,
        "disabled": undefined,
        "onClick": [Function],
        "size": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "iconColour": "#ffffff",
          "iconName": "cross-solid",
          "iconSize": 32,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
